crates/toml_edit/tests/snapshots/invalid/ext/table/duplicate-key-1.stderr
TOML parse error at line 3, column 1
  |
3 | [a.b]
  | ^
invalid table header
duplicate key `b` in table `a`
